--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="css/normalize.css" />
 	<link rel="stylesheet" href="css/styles.css" />
 	<link rel="stylesheet" href="css/960.css" />
-
+	<link href="img/icons/favicon.ico" rel="icon" type="image/x-icon" />
 </head>
 <body>
 	
