--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
 	<meta charset="utf-8" />
 	<title>Grid Layout</title>
 	
-
+	<link href="favicon.ico" rel="icon" type="image/x-icon" />
 	<link rel="stylesheet" href="css/normalize.css" />
 	<link rel="stylesheet" href="css/styles.css" />
 	<link rel="stylesheet" href="css/960.css" />
-	<link href="img/icons/favicon.ico" rel="icon" type="image/x-icon" />
+	<link href='http://fonts.googleapis.com/css?family=Lora|Oswald' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	
 <!-- Page Container -->	
-
+<div class= "container_12">
 	
 	
 	
 <!-- Header -->
-
+<header>
         <img src="img/logo-24.png" alt="960 Grid Logo" />
 		<h1>Grid Layout</h1>
-
+</header>
 
 	
 	
