--- a/index.html
+++ b/index.html
@@ -18,26 +18,26 @@
 	
 	
 <!-- Header -->
-<header>
-        <img src="img/logo-24.png" alt="960 Grid Logo" />
+	<header>
+        <img src="img/960_logo.jpg" alt="960 Grid Logo" />
 		<h1>Grid Layout</h1>
-</header>
+	</header>
 
 	
 	
 <!-- Navigation -->
-
+	<nav>
 		<ul>
 		  <li><a href="http://960.gs" id="grid">960 Grid</a></li>
 		  <li><a href="http://en.wikipedia.org/wiki/Grid_(page_layout)" id="wiki">WikiPedia Article</a></li>
 		  <li><a href="#" id="info">More Info</a></li>
 		</ul>
-
+	</nav>
 
 
 	
 <!-- Article (content body) -->
-
+	<article class="grid_8">
 		<h3>Introduction</h3>
 		<p>A typographic grid is a two-dimensional structure made up of a series of intersecting vertical and horizontal axes used to structure content. The grid serves as an armature on which a designer can organize text and images in a rational, easy to absorb manner.</p>
 	
@@ -51,10 +51,10 @@
 		<h3>Grids in Web Design</h3>
 		<p>While grid systems have seen significant use in print media, interest from web developers has only recently seen a resurgence. Website design frameworks producing HTML and CSS had existed for a while before newer frameworks popularised the use of grid-based layouts. Some examples of grid system frameworks are:</p>
 		
-
+	</article>
 
 <!-- Aside (supplementary info) -->		
-
+	<aside class= "grid_4">
 	
 		<h3>Additional Information</h3>
 		<ul>
@@ -63,18 +63,20 @@
 		  <li><a href="http://www.gridsystemgenerator.com/">Grid Generator</a></li>
 		  <li><a href="http://modulargrid.org/">Modular Grid System</a></li>
 		</ul>
-
+	</aside>
 
 
 <!-- Footer -->
-
+	<footer class= "grid_12">
+    
 		<p>This page was last modified on 23 August 2012 at 02:02.</p>
 		<p>Text is available under the Creative Commons Attribution-ShareAlike License; additional terms may apply. See Terms of use for details.</p>
 		<p>Wikipedia® is a registered trademark of the Wikimedia Foundation, Inc., a non-profit organization.
 		</p>
 
+	</footer>
 
-
+</div>
 <!-- end of page .container_12 -->
 	
 </body>
