--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	
 <!-- Header -->
 	<header>
-        <img src="img/960_logo.jpg" alt="960 Grid Logo" />
+        <img src="img/960_logo.png" alt="960 Grid Logo" />
 		<h1>Grid Layout</h1>
 	</header>
 
